ui/ux updated